@@ -7,6 +7,14 @@
 
 2000-04-19  Jeff Hobbs  <hobbs@scriptics.com>
 
+	* library/choosedir.tcl (::tk::dialog::file::chooseDir::Config):
+	* library/tkfbox.tcl (::tk::dialog::file::Config): removed the
+	extraneous glob on -initialdir after file isdir already returned 1
+	and moved cd trick into this case as the else already uses [pwd].
+	[Bug: 5181]
+
+	* win/winMain.c: moved extern call out of WinMain func
+
 	* README:
 	* generic/tk.h:
 	* unix/configure.in:
